; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_corefile.c_bfd_core_file_failing_command.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_corefile.c_bfd_core_file_failing_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@bfd_core = common dso_local global i64 0, align 8
@bfd_error_invalid_operation = common dso_local global i32 0, align 4
@_core_file_failing_command = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @bfd_core_file_failing_command(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @bfd_core, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @bfd_error_invalid_operation, align 4
  %11 = call i32 @bfd_set_error(i32 %10)
  store i8* null, i8** %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = load i32, i32* @_core_file_failing_command, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = call i8* @BFD_SEND(%struct.TYPE_5__* %13, i32 %14, %struct.TYPE_5__* %15)
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %12, %9
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i32 @bfd_set_error(i32) #1

declare dso_local i8* @BFD_SEND(%struct.TYPE_5__*, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
